--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   <title>Self driving car</title>
 </head>
 <body>
-  <canvas id="myCanvas"></canvas>
+  <canvas id="carCanvas"></canvas>
+  <div id="verticalButtons">
+    <button onclick="save()">💾</button>
+    <button onclick="discard()">🔴</button>
+  </div>
+  <canvas id="networkCanvas"></canvas>
   <script src="car.js"></script>
+  <script src="visualizer.js"></script>
+  <script src="network.js"></script>
+  <script src="sensor.js"></script>
+  <script src="utils.js"></script>
+  <script src="road.js"></script>
   <script src="controls.js"></script>
   <script src="main.js"></script>
   
